# sentinel

./: .env.example  .gitignore  CLAUDE.md  DEMO_BOM.csv  DEMO_NARRATIVE.md  DEMO_QUICK_START.md  DMSMS_BOM_PoC_Reference.md  ONE_PAGER.md  README.md  SENTINEL_PRD.md  SENTINEL_PRD_V2.md  SENTINEL_PRD_V3.md  SUMMARY.md  docker-compose.yml  thoughts.md
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/scripts/: verify_api_connections.py
backend/sentinel/: auth.py  config.py  health.py  main.py
backend/sentinel/db/: engine.py  models.py  session.py
backend/sentinel/enrichment/: base.py  digikey.py  merge.py  mouser.py  nexar.py  orchestrator.py  router.py  siliconexpert.py  z2data.py
backend/sentinel/export/: report.py  router.py
backend/sentinel/ingest/: normalizer.py  parser.py  router.py
backend/sentinel/intelligence/: __init__.py  context_packager.py  llm_client.py  narrative.py  policy.py  router.py  schemas.py  signals.py
backend/sentinel/risk/: router.py  scorer.py  weights.py
backend/sentinel/whatif/: engine.py  router.py  scenarios.py
backend/tests/: conftest.py  test_enrichment.py  test_ingest.py  test_intelligence.py  test_risk.py  test_whatif.py
frontend/: .env.local.example  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/pages/: BomManager.tsx  (+4 more)
scripts/: demo_golden_path.py  generate_synthetic_enrichment.py  seed_demo_bom.py  tailscale_setup.sh
scripts/data/: cn0566_bom.csv  industrial_edge_bom.csv  pluto_bom.csv
(+15 files in other folders)
